# AI-DataScientist

./: .gitignore  README.md  pyproject.toml  requirements.txt
aidatascientist/: __init__.py  agent.py  ai_analysis.py  automl.py  chat_with_dataset.py  cli.py  dashboard.py  datasets.py  feature_engineering.py  preprocessing.py  reports.py  sql_agent.py  statistics.py  visualization.py
aidatascientist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aidatascientist/examples/: example.py
aidatascientist/llm/: base_provider.py  claude_provider.py  openai_provider.py
aidatascientist/utils/: file_utils.py  logger.py
